app/client/src/entities/task/ui/task-card.module.css
.card {
    display: flex;
    flex-direction: column;

    padding: 12px 16px;

    background: var(--white);

    border-radius: 12px;
}

.group {
    display: flex;
    align-items: center;

    align-self: flex-end;

    gap: 16px;
}

.checkbox {
    display: flex;
    align-items: center;
    justify-content: center;

    width: 24px;
    height: 24px;

    background: url('../assets/checkbox-background.svg');

    border-radius: 50%;

    cursor: pointer;
}


.text {
    font-weight: 500;
    font-size: 16px;
    color: var(--charcoal);
}

.text_active {
    text-decoration: line-through;
}

.deleteButton {
    all: unset;

    width: 24px;
    height: 24px;

    cursor: pointer;
}

